@@ -152,23 +152,14 @@ if { $sizeof_double == 8 } {
 # but a hybrid.  They are in little endian format with the two words
 # swapped in big endian format.
 
-  if [ istarget "arm*-*-*" ] then {
-
-#   assume the long long represents a floating point double in ARM format
-     gdb_test "p/f oct" ".*2.1386676354387559e\\+265.*"
-
-  } elseif [ istarget "xscale*-*-*" ] then {
-
-#   assume the long long represents a floating point double in ARM format
-     gdb_test "p/f oct" ".*2.1386676354387559e\\+265.*"
-
-  } else {
-
-#   assume the long long represents a floating point double in little
-#   endian format
-    gdb_test "p/f oct" ".*-5.9822653797615723e-120.*"
-
-  }
+    if { [istarget "arm*-*-*"] || [istarget "xscale*-*-*"] } then {
+	# assume the long long represents a floating point double in ARM format
+	gdb_test "p/f oct" ".*2.1386676354387559e\\+265.*"
+    } else {
+	# assume the long long represents a floating point double in little
+	# endian format
+	gdb_test "p/f oct" ".*-5.9822653797615723e-120.*"
+    }
 
 } else {
 
